# TimeEval

./: .codecov.yml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  Annotations_taxi.txt.2  Annotations_taxi.txt.3  Annotations_taxi.txt.4  Annotations_taxi.txt.5  Annotations_taxi.txt.6  Annotations_taxi.txt.7  Annotations_taxi.txt.8  Annotations_taxi.txt.9  CITATION.cff  LICENSE  MANIFEST.in  README.md  concat_dataset.py  conftest.py  dads.json  datasets.csv  datasets.json  easy-example-experiment.py  environment.yml  example-experiment.py  example.py  mypy.ini  pyproject.toml  remotes.json  requirements.ci  requirements.dev  requirements.txt  setup.cfg  setup.py  taxi.ts.2  taxi.ts.3  taxi.ts.4  taxi.ts.5  taxi.ts.6  (+4 more)
.github/workflows/: build.yml  codeql-analysis.yml  generate-stubs.yml  pre-commit.yml  python-test-conda.yml  test-build-matrix.yml  test-coverage-badge.yml  test-matrix.yml  test-pr.yml
docs/: .gitignore  Makefile  conf.py  conf.py.bak  index.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: index.rst  timeeval._core.rst  timeeval.adapters.rst  timeeval.algorithms.rst  timeeval.core.rst  timeeval.datasets.rst  timeeval.heuristics.rst  timeeval.metrics.rst  timeeval.metrics.thresholding.rst  timeeval.params.rst  timeeval.rst  timeeval.utils.rst
docs/concepts/: algorithms.md  configuration.md  datasets.md  distributed.md  index.md  metrics.md  params.md  results.md
docs/dev/: index.md  index.rst
docs/user/: custom-metrics.md  heuristics.md  index.md  integrate-algorithm.md  integrate-dataset.md  runtime.md  usage-distributed-timeeval.md  usage-timeeval.md
experiments/: 2021-02-11-demo.py
experiments/algorithms/: __init__.py  cof.py  common.py  grammarviz.py  norma.py  series2graph.py  stomp.py
notebooks/: Check run.ipynb  Datasets.ipynb  Deviating Baselines.ipynb  Paper plots (GutenTAG&Benchmark).ipynb  TimeEval Bechmark Retry1 result analysis.ipynb  TimeEval Bechmark result analysis.ipynb  TimeEval Correlation result analysis.ipynb  TimeEval GutenTAG result analysis.ipynb  TimeEval default-optim result comparison.ipynb  TimeEval parameter optimization analysis 1.ipynb  TimeEval parameter optimization analysis 2.ipynb  TimeEval parameter optimization analysis 3.ipynb  TimeEval parameter optimization analysis 4.ipynb  TimeEval parameter optimization analysis 5.ipynb  TimeEval parameter optimization analysis 6.ipynb  TimeEval parameter optimization analysis extra.ipynb  TimeEval parameter optimization analysis extra2.ipynb  TimeEval parameter optimization analysis.ipynb  TimeEval result analysis.ipynb  TimeEval shared param optimization analysis 2.ipynb  TimeEval shared param optimization analysis.ipynb  bad performing algorithms.ipynb  errors.ipynb  extract_parameter_matrix.py
notebooks/data-prep/: ATLAS Higgs Boson Challenge.ipynb  CATS.ipynb  Dataset Metadata Analysis.ipynb  Dataset Period Size Estimation.ipynb  Exathlon.ipynb  GHL.ipynb  Genesis Demonstrator.ipynb  IOPS AI Challenge.ipynb  KDD-TSAD (obsolete).ipynb  KDD-TSAD.ipynb  Keogh.ipynb  MGAB.ipynb  MIT-BIH Arrhythmia Database.ipynb  MIT-BIH Long-Term ECG Database.ipynb  MIT-BIH Supraventricular Arrhythmia DB.ipynb  NAB.ipynb  NASA Spacecraft Telemtry.ipynb  NormA.ipynb  Overview.md  SIGKDD21 TSAD Competition.ipynb  SSA.ipynb  SWaT.ipynb  Server Machine Dataset.ipynb  TODS-synthetic.ipynb  TSB-UAD.ipynb  UCI-3W.ipynb  UCI-CalIt2.ipynb  UCI-Condition Monitoring.ipynb  UCI-Daphnet.ipynb  UCI-Dodgers.ipynb  UCI-Kitsune.ipynb  UCI-Metro.ipynb  UCI-Occupancy.ipynb  UCI-Opportunity.ipynb  WADI.ipynb  YahooWebscopeS5.ipynb  config.py
scripts/: analyze-datasets.py  calculate_metric.py  concat_dataset.py  convert2bin.py  create_summary.py  fill.py  merge_results.py  plot.py  preprocess_dataset.py  recalculate_metrics.py  reevaluate.py  test_preprocess_dataset.py
tests/: __init__.py  overall_test.py  test_adapters.py  test_algorithm.py  test_algorithm_timer.py  test_dataset_and_algorithm_match.py  test_datasets.py  test_distributed_timeeval.py  test_experiment_combinations_file.py  test_experiments.py  test_import_data.py  test_metrics_utils.py  test_output_data.py  test_preprocess_dataset_utils.py  test_remote.py  test_repetitions.py  test_resource_constraints.py  test_timeeval.py  test_timeeval_exceptions.py  test_tqdm_joblib.py  test_training_type.py  test_unique_exp_name.py  test_utils.py  test_window_utils.py  utils.py
tests/adapters/: test_jar.py  (+7 more)
timeeval/: __init__.py  _version.py  algorithm.py  constants.py  customdatasets.py  data_types.py  datasets.py  experiments.py  remote.py  remote_configuration.py  resource_constraints.py  timeeval.py  times.py
timeeval_experiments/: 2021-02-11-demo.py  2021-03-01-demo.py  2021-03-10-RR.py  2021-06-15-timing-test.py  2021-07-02-default-params.py  2021-07-08-default-params.py  2021-07-15-default-params.py  2021-07-21-default-params.py  2021-07-23-shared-optim.py  2021-10-01-shared-optim-2.py  2021-10-04_optim-params_encdec-ad.py  2021-10-04_optim-params_slow_algorithms.py  2021-10-06-optimization.py  2021-10-14_optimization_slow_algorithms.py  2021-10-18-runtime-gutentag.py  2021-10-18-runtime.py  2021-10-20-runtime-benchmark.py  2021-10-27-runtime-retries.py  2021-11-02-debug-nondeterminism.py  2021-11-12_debug-dask.py  2021-11-16-rerun-benchmark-errors.py  2021-11-17-rerun-benchmark-normal-docker-baseline.py  2021-11-22-runtime-benchmark-nasa.py  2021-11-22-runtime-benchmark-smd.py  2021-11-23-runtime-benchmark-daphnet.py  2021-11-23-runtime-benchmark-mitdb.py  2021-11-23-runtime-benchmark-ssa.py  2021-11-23-runtime-benchmark-webscope.py  2021-11-26-runtime-benchmark-2.py  2021-11-30-runtime-gutentag-2.py  2021-12-02-rerun-deepant.py  2021-12-06-runtime-correlation.py  2021-12-08_multi-subsequence-lof.py  2021-12-14_multi-subsequence-lof-test1.py  2022-01-18_deviating-baselines.py  2022-01-18_swat_and_wadi.py  2022-02-01_multivariate-algorithms.py  2022-02-21-runtime-benchmark-revision.py  2022-02-25-runtime-difflen-revision.py  2022-03-01-multivariate-algorithms-2.py  (+21 more)
(+311 files in other folders)
