[metadata]
license_file = LICENSE

[coverage:run]
branch = False
omit =
    timeeval/utils/concat_dataset.py
    timeeval/utils/convert2bin.py
    timeeval/utils/preprocess_dataset.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    \.\.\.
    def __repr__
    pass
    if __name__ == .__main__.:
    def main
    def _create_arg_parser
fail_under = 80
skip_covered = True
sort = Cover

[mypy]

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-dask.distributed.*]
ignore_missing_imports = True

[mypy-distributed.client.*]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-durations.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[mypy-prts.*]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True
