[metadata]
license_file = LICENSE

[coverage:run]
branch = False
omit =
    **/__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    \.\.\.
    def __repr__
    pass
fail_under = 80
skip_covered = True
sort = Cover

[mypy]
warn_unused_configs = True
warn_unused_ignores = True
warn_no_return = True
exclude = (^timeeval_experiments/\d\d\d\d-\d\d-\d\d[_-].+$)

[mypy-timeeval.*]
warn_return_any = True
disallow_untyped_defs = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-dask.*]
ignore_missing_imports = True

[mypy-distributed.client.*]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-durations.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[mypy-prts.*]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-numpyencoder.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True
