[metadata]
license_files =
    LICENSE

[coverage:run]
branch = False
omit =
    **/__main__.py
    timeeval/algorithms/*

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    \.\.\.
    def __repr__
    pass
fail_under = 80
skip_covered = True
sort = Cover

[mypy]
exclude = (^timeeval_experiments/\d\d\d\d-\d\d-\d\d[_-].+$)
ignore_missing_imports = True
warn_unused_configs = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
check_untyped_defs = True

[mypy-optuna.samplers._tpe.*]
follow_imports=skip
